changement des paramèetre des route et amélioration du code
